[package]
name = "gitbook2text"
version = "0.3.0"
edition = "2021"
authors = ["MAXIMILIEN GRZECZKA maximilien.grzeczka@epitech.eu"]
description = "A CLI tool to download GitBook pages and convert them to markdown and text"
documentation = "https://docs.rs/gitbook2text"
homepage = "https://github.com/Maki-Grz/gitbook2text"
repository = "https://github.com/Maki-Grz/gitbook2text"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["gitbook", "markdown", "converter", "cli", "downloader"]
categories = ["command-line-utilities", "text-processing"]
rust-version = "1.91"

[dependencies]
tokio = { version = "1.47", features = ["fs", "rt", "rt-multi-thread", "macros"] }
futures = "0.3"
reqwest = "0.12"
pulldown-cmark = "0.13"
regex = "1.11"
scraper = "0.21"
url = "2.5"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3.12"

[[bin]]
name = "gitbook2text"
path = "src/main.rs"

[lib]
name = "gitbook2text"
path = "src/lib.rs"
